fix top buttons, overflow for small displays, rename classes

--- a/css/click_admin_menu.css
+++ b/css/click_admin_menu.css
@@ -11,20 +11,24 @@ div.admin div.left { margin-left:0; }
 .page-admin-index .dev-query, 
 .page-admin-index #breadcrumb {display:none;}
 .page-admin-index h3{ margin:0 0 7px;}
-.adminMenuP {
+.camP {
 	position:fixed;
 	top:0; left:0;
 	z-index:999999;
+	max-height: 100%;
+    overflow: auto;
 }
-.adminMenuTitle {
+.adminMenuVisible .cam_navigation {
+	display:block;
+}
+.cam_navigation {
 	font-weight:bold;
-	padding-top:12px;
-	padding-left:49px;
-	padding-bottom:17px;
-	text-align:right;
-	padding-right:10px;
+	position:fixed;
+	top:10px;
+	left:150px;
+	display:none;
 }
-.adminMenu {
+.cam {
 	box-shadow:0 0 25px rgba(0,0,0, 0.4);
 	background:white;
 	padding-bottom:10px;
@@ -33,6 +37,7 @@ div.admin div.left { margin-left:0; }
 	border-right:3px solid #FFE68E;
 	border-bottom:3px solid #FFE68E;
 	font-size:15px;
+	padding-top:50px;
 }
 .adminMenuCC {
 	position:fixed;
@@ -44,7 +49,7 @@ div.admin div.left { margin-left:0; }
 	border-bottom-right-radius:4px;
 	box-shadow:0 0 10px rgba(0,0,0, 0.5);
 }
-.adminMenuOpen {
+.cam_open {
 	position:fixed;
 	width:33px;
 	height:33px;
@@ -52,10 +57,10 @@ div.admin div.left { margin-left:0; }
 	border-bottom-right-radius:4px;
 	box-shadow:0 0 10px rgba(0,0,0, 0.5);
 }
-.adminMenuVisible .adminMenuOpen {
+.adminMenuVisible .cam_open {
 	background-color:#FFE68E;
 }
-.adminMenuVisible .adminMenu {
+.adminMenuVisible .cam {
 	display:block !important;
 }
 .pageBodyOverlay {
@@ -73,7 +78,7 @@ div.admin div.left { margin-left:0; }
 .cam_link {
 	text-decoration:none;
 	display:block;
-	padding:7px 70px 7px 15px;
+	padding:9px 70px 9px 25px;
 	color:black;
 }
 .cam_link:hover {background:#eee; color:black; }
@@ -89,14 +94,22 @@ div.admin div.left { margin-left:0; }
 }
 .cam_icon {
 	width:25px;
+	display:block;
 }
 .cam_icon_p:hover {
 	opacity:1;
+}
+.cam_icon_p:hover {
+	background:#FFF5D3;
 }
 .cam_icon_p {
 	display:inline-block;
 	opacity:0.5;
 	margin-left:10px;
+	padding:5px;
+	display:block;
+	float:left;
+	border-radius:10px;
 }
 
 
